# rag-system

./: .env.example  .gitignore  README.md  commit_guide.md  docker-compose.yml  main.py  workflow.md
data/lightrag_store/: graph_chunk_entity_relation.graphml  kv_store_doc_status.json  kv_store_entity_chunks.json  kv_store_full_docs.json  kv_store_full_entities.json  kv_store_full_relations.json  kv_store_llm_response_cache.json  kv_store_relation_chunks.json  kv_store_text_chunks.json  vdb_chunks.json  vdb_entities.json  vdb_relationships.json
frontend/: app.js  index.html  style.css
python/: config.py  requirements.txt
python/agents/: __init__.py  grader.py  graph.py  llm_client.py  model_registry.py  reviewer.py  rewriter.py  router.py  state.py  translator.py  writer.py
python/data_processing/: chunker.py  cleaner.py  loader.py
python/evaluation/: evaluator.py  synthetic_generator.py
python/hyde/: __init__.py  generator.py
python/indexing/: __init__.py  llamaindex_indexer.py  query_engine.py
python/kafka_workers/: __init__.py  indexer_worker.py  ingestion_worker.py  kafka_config.py  query_worker.py
python/raptor/: __init__.py  clustering.py  embedder.py  summarizer.py  tree_builder.py
python/retrieval/: cache.py  feedback.py  hybrid_search.py  metadata_search.py  qdrant_client.py  reranker.py
python/scripts/: 01_download_data.py  02_build_raptor.py  03_index_qdrant.py  04_evaluate.py  05_migrate_to_lightrag.py  embedding_server.py
rust_backend/: .env.example  Cargo.toml  chat_history.db  chat_history.db-shm  chat_history.db-wal
rust_backend/src/: config.rs  errors.rs  main.rs
rust_backend/src/agents/: analyst.rs  compliance.rs  mod.rs  rag.rs  router.rs
rust_backend/src/models/: document.rs  mod.rs  query.rs
rust_backend/src/routes/: health.rs  history.rs  mod.rs  query.rs  ws.rs
rust_backend/src/services/: database.rs  groq.rs  kafka.rs  mod.rs  qdrant.rs  reranker.rs
rust_text_processor/: Cargo.toml
(+8 files in other folders)
