[package]
name = "legal-rag-backend"
version = "0.1.0"
edition = "2021"
description = "Agentic RAG Legal System - Rust Backend with Multi-Agent Orchestration"

[dependencies]
# Web Framework
actix-web = "4"
actix-cors = "0.7"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# AI/LLM SDK
rig-core = { version = "0.6", features = ["derive"] }

# Qdrant Client
qdrant-client = "1"

# HTTP Client (for Groq API)
reqwest = { version = "0.12", features = ["json"] }

# Environment
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"
actix-files = "0.6"

# Error Handling
anyhow = "1"
thiserror = "1"

# UUID
uuid = { version = "1", features = ["v4"] }
md-5 = "0.10.6"
hex = "0.4.3"
