[package]
name = "arxiv-rag-backend"
version = "0.3.0"
edition = "2021"
description = "Cross-lingual ArXiv RAG System - Rust Gateway with Kafka + WebSocket Streaming"

[dependencies]
# Web Framework
actix-web = "4"
actix-cors = "0.7"
actix-ws = "0.3"
actix-files = "0.6"

# Async Runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Qdrant Client
qdrant-client = "1"

# Kafka
rdkafka = { version = "0.36", features = ["cmake-build", "tokio"] }

# Environment
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"

# Error Handling
anyhow = "1"
thiserror = "1"

# UUID
uuid = { version = "1", features = ["v4"] }
md-5 = "0.10.6"
hex = "0.4.3"

# SQLite (Chat History)
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
